[tool.poetry]
name = "repl-nix-auditreportanalyzer"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
openai = "^1.47.0"
trafilatura = "^1.12.2"
pypdf2 = "^3.0.1"
sqlalchemy = "^2.0.35"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
